# OpenShell

./: README.md  dev-sandbox-policy.rego  dev-sandbox-policy.yaml
.claude/agent-memory/arch-doc-writer/: MEMORY.md
architecture/: README.md  gateway-single-node.md  inference-routing.md  sandbox.md
crates/navigator-cli/: Cargo.toml
crates/navigator-cli/src/: main.rs  run.rs
crates/navigator-core/src/: inference.rs  lib.rs
crates/navigator-core/src/proto/: mod.rs
crates/navigator-router/: Cargo.toml  README.md
crates/navigator-router/src/: backend.rs  config.rs  lib.rs  mock.rs
crates/navigator-router/tests/: backend_integration.rs
crates/navigator-sandbox/src/: grpc_client.rs  lib.rs  opa.rs  policy.rs  proxy.rs
crates/navigator-sandbox/src/l7/: inference.rs  mod.rs
crates/navigator-server/src/: inference.rs
deploy/docker/sandbox/: Dockerfile.base
e2e/python/: conftest.py  test_inference_routing.py  test_sandbox_policy.py  test_sandbox_providers.py
examples/inference/: README.md  inference.py  sandbox-policy.yaml
proto/: inference.proto  sandbox.proto
python/navigator/: __init__.py  sandbox.py
scripts/: update_license_headers.py
